index ve script dosyalarını oluşturdum

--- a/örnekler/index.html
+++ b/örnekler/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="data.html"></script>
+
+    <script src="ulkeler.html"></script>
+    <script src="script.js"></script>
 </body>
 </html>
